--- a/index.html
+++ b/index.html
@@ -1,97 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Our Journey</title>
 
-  <style>
-    body {
-      margin: 0;
-      font-family: "Georgia", serif;
-      background: #0b0b0b;
-      color: #eaeaea;
-    }
+  <!-- WAJIB: nyambungin CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    header {
-      padding: 40px 20px;
-      text-align: center;
-      border-bottom: 1px solid #222;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 32px;
-      letter-spacing: 1px;
-    }
-
-    header p {
-      margin-top: 10px;
-      font-size: 14px;
-      opacity: 0.6;
-    }
-
-    .container {
-      max-width: 700px;
-      margin: 40px auto;
-      padding: 0 20px;
-    }
-
-    .section {
-      margin-bottom: 60px;
-    }
-
-    .section h2 {
-      font-size: 18px;
-      margin-bottom: 15px;
-      border-left: 3px solid #444;
-      padding-left: 10px;
-      opacity: 0.9;
-    }
-
-    .placeholder {
-      font-size: 14px;
-      opacity: 0.5;
-      font-style: italic;
-      line-height: 1.7;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 12px;
-      opacity: 0.4;
-      margin-bottom: 30px;
-    }
-  </style>
+  <!-- biar tampilannya cakep di HP -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
 
-<header>
-  <h1>Our Journey</h1>
-  <p>A private space for quiet moments</p>
-</header>
+  <div class="container">
+    <h1>Our Journey</h1>
+    <div class="subtitle">
+      A quiet place for stories, memories, and words never spoken.
+    </div>
 
-<div class="container">
-
-  <div class="section">
-    <h2>Writings</h2>
-    <div class="placeholder">
-      Content will appear here.
+    <div class="card">
+      <p>
+        Welcome.  
+        This space is private, personal, and unfinished —  
+        just like the journey itself.
+      </p>
     </div>
   </div>
-
-  <div class="section">
-    <h2>Gallery</h2>
-    <div class="placeholder">
-      Images will appear here.
-    </div>
-  </div>
-
-</div>
-
-<footer>
-  Original works only. Do not repost or use for AI training.
-</footer>
 
 </body>
 </html>
