--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <div class="card">
       <p>
-        Welcome.  
-        This space is private, personal, and unfinished —  
-        just like the journey itself.
+  Welcome.  
+  This space is dedicated to Prussia and Scotland from the animanga series Hetalia.  
+  A personal place, unfinished, growing quietly alongside its own journey.
       </p>
     </div>
   </div>
