--- a/index.html
+++ b/index.html
@@ -3,29 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <title>Our Journey</title>
-
-  <!-- WAJIB: nyambungin CSS -->
   <link rel="stylesheet" href="style.css">
-
-  <!-- biar tampilannya cakep di HP -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 
-  <div class="container">
-    <h1>Our Journey</h1>
-    <div class="subtitle">
-      A quiet place for stories, memories, and words never spoken.
-    </div>
+  <main class="slider">
 
-    <div class="card">
-      <p>
-  Welcome.  
-  This space is dedicated to Prussia and Scotland from the animanga series Hetalia.  
-  A personal place, unfinished, growing quietly alongside its own journey.
+    <!-- PAGE 1: PUTIH POLOS -->
+    <section class="page page-intro">
+      <h1>Our Journey</h1>
+      <p class="intro-text">
+        Welcome.<br>
+        This space is dedicated to Prussia and Scotland from the animanga series Hetalia.
       </p>
-    </div>
-  </div>
+    </section>
+
+    <!-- PAGE 2: FAIRYTALE -->
+    <section class="page page-fairytale">
+      <div class="ornament">✦ ✦ ✦</div>
+
+      <p class="fairytale-text">
+        A personal place, unfinished, growing quietly alongside its own journey.
+      </p>
+
+      <div class="menu">
+        <div class="menu-item">Gallery</div>
+        <div class="menu-item">Writing</div>
+      </div>
+    </section>
+
+  </main>
 
 </body>
 </html>
