--- a/index.html
+++ b/index.html
@@ -21,20 +21,33 @@
     </section>
 
     <!-- PAGE 2: FAIRYTALE -->
-    <section class="page page-fairytale">
-      <div class="ornament">✦ ✦ ✦</div>
+<section class="page page-fairytale">
+  <div class="ornament">✦ ✦ ✦</div>
 
-      <p class="fairytale-text">
-        A personal place, unfinished, growing quietly alongside its own journey.
-      </p>
+  <p class="fairytale-text">
+    A personal place, unfinished, growing quietly alongside its own journey.
+  </p>
 
-      <div class="menu">
-        <div class="menu-item">Gallery</div>
-        <div class="menu-item">Writing</div>
-      </div>
-    </section>
+  <div class="menu">
+    <div class="menu-item">Gallery</div>
+    <div class="menu-item">Writing</div>
+  </div>
 
-  </main>
+  <!-- CONTACT SECTION -->
+  <div class="contact">
+    <p class="contact-text">
+      Want to connect, or just yap a little?
+    </p>
 
-</body>
-</html>
+    <div class="contact-icons">
+      <a href="https://tumblr.com/USERNAME" target="_blank" aria-label="Tumblr">
+        <img src="tumblr.svg" alt="Tumblr">
+      </a>
+
+      <a href="mailto:YOUREMAIL@example.com" aria-label="Email">
+        <img src="email.svg" alt="Email">
+      </a>
+    </div>
+  </div>
+
+</section>
