--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
     </p>
 
     <div class="contact-icons">
-      <a href="https://tumblr.com/USERNAME" target="_blank" aria-label="Tumblr">
+      <a href="https://tumblr.com/mawehee" target="_blank" aria-label="Tumblr">
         <img src="tumblr.svg" alt="Tumblr">
       </a>
 
-      <a href="mailto:YOUREMAIL@example.com" aria-label="Email">
+      <a href="mailto:solarnoriza@gmail.com" aria-label="Email">
         <img src="email.svg" alt="Email">
       </a>
     </div>
