--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
       <a href="mailto:solarnoriza@gmail.com" aria-label="Email">
         <img src="email.svg" alt="Email">
-      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=solarnoriza@gmail.com" target="_blank" aria-label="Email">
+      <a href="mailto:solarnoriza@gmail.com" aria-label="Email">
   <img src="email.svg" alt="Email">
+      </a>
       </a>
     </div>
   </div>
