--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
         <img src="tumblr.svg" alt="Tumblr">
       </a>
 
-      <a href="mailto:solarnoriza@gmail.com" aria-label="Email">
-        <img src="email.svg" alt="Email">
-      <a href="mailto:solarnoriza@gmail.com" aria-label="Email">
+      <a href="mailto:solar.kiku@gmail.com" aria-label="Email">
   <img src="email.svg" alt="Email">
+      </a>
       </a>
       </a>
     </div>
