--- a/index.html
+++ b/index.html
@@ -35,21 +35,17 @@
 
   <!-- CONTACT SECTION -->
   <div class="contact">
-    <p class="contact-text">
-      Want to connect, or just yap a little?
-    </p>
+  <p class="contact-text">
+    Want to connect, or just yap a little?
+  </p>
 
-    <div class="contact-icons">
-      <a href="https://tumblr.com/mawehee" target="_blank" aria-label="Tumblr">
-        <img src="tumblr.svg" alt="Tumblr">
-      </a>
+  <div class="contact-icons">
+    <a href="https://tumblr.com/mawehee" target="_blank" aria-label="Tumblr">
+      <img src="tumblr.svg" alt="Tumblr">
+    </a>
 
-      <a href="mailto:solar.kiku@gmail.com" aria-label="Email">
-  <img src="email.svg" alt="Email">
-      </a>
-      </a>
-      </a>
-    </div>
+    <a href="mailto:solarnoriza@gmail.com" aria-label="Email">
+      <img src="email.svg" alt="Email">
+    </a>
   </div>
-
-</section>
+  </div>
